--- a/test/testioid/testioid.vcxproj
+++ b/test/testioid/testioid.vcxproj
@@ -70,9 +70,9 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\bin\</OutDir>
-    <IncludePath>$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\include\;$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\include\eigen3\;$(IncludePath)</IncludePath>
-    <LibraryPath>$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\bin\;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)\..\bin\</OutDir>
+    <IncludePath>$(SolutionDir)\..\include\;$(SolutionDir)\..\include\eigen3\;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\..\bin\;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -86,8 +86,8 @@
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
-      <OutputFile>$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\bin\$(TargetName)$(TargetExt)</OutputFile>
-      <AdditionalLibraryDirectories>$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\bin\;D:\Matlab\extern\lib\win64\microsoft;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <OutputFile>$(SolutionDir)\..\bin\$(TargetName)$(TargetExt)</OutputFile>
+      <AdditionalLibraryDirectories>$(SolutionDir)\..\bin\;D:\Matlab\extern\lib\win64\microsoft;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libmat.lib;libmx.lib;libmex.lib;libeng.lib;mujoco200nogl.lib; mujoco200.lib;glfw3static.lib;glfw3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>
       </IgnoreSpecificDefaultLibraries>
