--- a/test/testlqg/testlqg.vcxproj
+++ b/test/testlqg/testlqg.vcxproj
@@ -97,9 +97,9 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\bin\</OutDir>
-    <IncludePath>$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\include\;$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\include\eigen3\;$(IncludePath)</IncludePath>
-    <LibraryPath>$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\bin\;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)\..\bin\</OutDir>
+    <IncludePath>$(SolutionDir)\..\include\;$(SolutionDir)\..\include\eigen3\;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\..\bin\;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <IncludePath>$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\include\;$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\include\eigen3\;$(IncludePath)</IncludePath>
@@ -116,10 +116,10 @@
       <AdditionalIncludeDirectories>D:\Matlab\extern\include;C:\Program Files\MATLAB\R2018b\extern\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <OutputFile>$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\bin\$(TargetName)$(TargetExt)</OutputFile>
+      <OutputFile>$(SolutionDir)\..\bin\$(TargetName)$(TargetExt)</OutputFile>
     </Link>
     <Link>
-      <AdditionalLibraryDirectories>$(HOMEDRIVE)$(HOMEPATH)\Dropbox\Tensegrity\bin\;D:\Matlab\extern\lib\win64\microsoft;C:\Program Files\MATLAB\R2018b\extern\lib\win64\microsoft;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\..\bin\;D:\Matlab\extern\lib\win64\microsoft;C:\Program Files\MATLAB\R2018b\extern\lib\win64\microsoft;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libmat.lib;libmx.lib;libmex.lib;libeng.lib;mujoco200nogl.lib; mujoco200.lib;glfw3static.lib;glfw3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalOptions>/NODEFAULTLIB:"libcmt.lib" %(AdditionalOptions)</AdditionalOptions>
     </Link>
